<resources>
    <string name="app_name">navigationApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">mfikri.dev@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="create_new_account">Create new account !</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="silahkan_login_untuk_memakai_aplikasi">Silahkan login untuk memakai aplikasi</string>
    <string name="logo">Logo</string>
</resources>