<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@drawable/sign_in"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/logotext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            />

        <TextView
            android:layout_below="@id/ivLogo"
            android:textAlignment="center"
            android:id="@+id/tvLoginText"
            android:layout_marginBottom="50dp"
            android:text="@string/silahkan_login_untuk_memakai_aplikasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <EditText
            android:autofillHints="username"
            android:hint="@string/username"
            android:drawableStart="@drawable/ic_person"
            android:id="@+id/etUsername"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tvLoginText"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_margin"
            android:imeOptions="actionNext"
            android:inputType="text"
            />
        <EditText
            android:autofillHints="password"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:drawableStart="@drawable/ic_password"
            android:id="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/etUsername"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:layout_marginBottom="@dimen/fab_margin"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:onClick="loginClick"
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:background="@drawable/btn_sign_in" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:layout_below="@id/btnLogin"
            android:layout_centerHorizontal="true"
            />

    </RelativeLayout>

</LinearLayout>